--- a/main.html
+++ b/main.html
@@ -8,6 +8,9 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div>
+		<a href="https://youtu.be/F8dKd_waASc?si=UjDvzl_kLlRQLbbe">My current favourite song is [song_name]" where [song_name] should be replaced with your actual favourite song name.</a>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
